# design-patterns-in-c-

./: README.md
case_1/: CMakeLists.txt  Duck.cpp  FlyNoWay.cpp  FlyWithWings.cpp  Main.cpp  MallardDuck.cpp  WoddenDuck.cpp
case_1/include/: Duck.hpp  FlyBehaviour.hpp  FlyNoWay.hpp  FlyWithWings.hpp  MallardDuck.hpp  WoddenDuck.hpp
case_1/source/: Duck.cpp  FlyNoWay.cpp  FlyWithWings.cpp  Main.cpp  MallardDuck.cpp  WoddenDuck.cpp
case_2/: CMakeLists.txt
case_2/include/: CurrentConditionsDisplay.hpp  DataClass.hpp  DisplayElement.hpp  Observer.hpp  Subject.hpp  WeatherData.hpp
case_2/source/: CurrentConditionsDisplay.cpp  Main.cpp  Subject.cpp  WeatherData.cpp
